Refactored game panel and scene switch mechanism

--- a/src/main/resources/cedro_celuch/quizroyale/game-panel.fxml
+++ b/src/main/resources/cedro_celuch/quizroyale/game-panel.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@game-panel.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cedro_celuch.quizroyale.GamePanelController">
+<StackPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cedro_celuch.quizroyale.GamePanelController">
    <children>
-      <GridPane alignment="CENTER" StackPane.alignment="CENTER">
+      <GridPane alignment="CENTER" stylesheets="@game-panel.css" StackPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
